--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -310,14 +310,14 @@
         <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo.png" alt="FAF Games" /></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo.png" alt="76 Unblocked Games Games" /></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="menu-toggle"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
     <ul class="header_menu mr-auto">
 	    <li class="nav-item">
-            <a href="https://docs.google.com/document/d/1sgC0ADkCZnb6yViUYuqt1zyR7gdERMFJovSb_svO4VU/edit?usp=sharing" target="_blank" rel="noopener noreferrer class="nav-link">Alt Links</a>
+            <a href="https://docs.google.com/document/d/19MJckEDfv3vLoBZF4LgUiGP-TysihX_UW1JJBNOVZMQ/edit?tab=t.0#heading=h.nl3f7wa5u6ji" target="_blank" rel="noopener noreferrer class="nav-link">Alt Links</a>
         </li>
         <li class="nav-item active">
             <a href="https://76-unblockedgames.github.io/index.html" class="nav-link">Home</a>
@@ -329,25 +329,25 @@
             <a href="https://76-unblockedgames.github.io/adventure/index.html" class="nav-link">Adventure</a>
         </li>
         <li class="nav-item">
-            <a href="https://faf-games.github.io/bike/index.html" class="nav-link">Bike</a>
+            <a href="https://76 Unblocked Games-games.github.io/bike/index.html" class="nav-link">Bike</a>
         </li>        
         <li class="nav-item">
-            <a href="https://faf-games.github.io/car/index.html" class="nav-link">Car</a>
+            <a href="https://76 Unblocked Games-games.github.io/car/index.html" class="nav-link">Car</a>
         </li>  
 	    <li class="nav-item">
-            <a href="https://faf-games.github.io/game/1v1-lol.html" class="nav-link">1v1.lol Unblocked</a>
+            <a href="https://76 Unblocked Games-games.github.io/game/1v1-lol.html" class="nav-link">1v1.lol Unblocked</a>
         </li>
 	    </li>  
         <!-- More Dropdown -->
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown">More</a>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="https://faf-games.github.io/idle/index.html">Idle</a></li>
-                <li><a class="dropdown-item" href="https://faf-games.github.io/shooting/index.html">Shooting</a></li>
-                <li><a class="dropdown-item" href="https://faf-games.github.io/skill/index.html">Skill</a></li>
-                <li><a class="dropdown-item" href="https://faf-games.github.io/sport/index.html">Sport</a></li>
-                <li><a class="dropdown-item" href="https://faf-games.github.io/classroom6x/index.html">Classroom 6x</a></li>
-                <li><a class="dropdown-item" href="https://faf-games.github.io/2-player-games/index.html">2 Player Games</a></li>
+                <li><a class="dropdown-item" href="https://76 Unblocked Games-games.github.io/idle/index.html">Idle</a></li>
+                <li><a class="dropdown-item" href="https://76 Unblocked Games-games.github.io/shooting/index.html">Shooting</a></li>
+                <li><a class="dropdown-item" href="https://76 Unblocked Games-games.github.io/skill/index.html">Skill</a></li>
+                <li><a class="dropdown-item" href="https://76 Unblocked Games-games.github.io/sport/index.html">Sport</a></li>
+                <li><a class="dropdown-item" href="https://76 Unblocked Games-games.github.io/classroom6x/index.html">Classroom 6x</a></li>
+                <li><a class="dropdown-item" href="https://76 Unblocked Games-games.github.io/2-player-games/index.html">2 Player Games</a></li>
             </ul>
         </li>
     </ul>
@@ -892,7 +892,7 @@
 <p>In case you haven’t heard, 1v1.lol is an exciting one-on-one shooter game that also lets you build defensive structures. It’s like a mini version of Fortnite but more focused on quick, <strong>tactical battles</strong>. Whether you love building or just want to outshoot your opponent, this game offers both. It’s become super popular in schools, especially because it tests your reflexes and strategy in a short, fun match.</p>
 
 <h2>Why Do You Need 1v1.lol Unblocked?</h2>
-<p>Most school or work networks block <strong>online games</strong>, which can be a real bummer when you want a quick break. The <strong>unblocked version of 1v1.lol</strong> is great because it bypasses those restrictions, letting you play on your school’s computer without any hassle. You can just search for a website that hosts the  <strong> <a href="https://faf-games.github.io/">Unblocked Games</a></strong>, load it up, and start having fun.</p>
+<p>Most school or work networks block <strong>online games</strong>, which can be a real bummer when you want a quick break. The <strong>unblocked version of 1v1.lol</strong> is great because it bypasses those restrictions, letting you play on your school’s computer without any hassle. You can just search for a website that hosts the  <strong> <a href="https://76 Unblocked Games-games.github.io/">Unblocked Games</a></strong>, load it up, and start having fun.</p>
 
 <h2>How to Find 1v1.lol Unblocked</h2>
 <p>Finding the unblocked version is pretty easy. There are tons of sites that offer it. Just search for <strong>1v1.lol unblocked on Google</strong>, and you’ll come across some game sites that let you play without any restrictions. Once you’re on one of these sites, you can jump right into a game—no need to download anything or create an account.</p>
@@ -914,7 +914,7 @@ The unblocked version is especially popular among students because it allows the
                          <div class="col-lg-4 col-md-6 col-sm-12">
                              <div class="single-footer">
                                  <h3>About us</h3>
-       <p>Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://faf-games.github.io/">FAF Games</a>. Join FAF Games today and start playing!</p>
+       <p>Welcome to 76 Unblocked Games Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76 Unblocked Games-games.github.io/">76 Unblocked Games Games</a>. Join 76 Unblocked Games Games today and start playing!</p>
                              </div>
                          </div>
                          <div class="col-lg-5 col-md-6 col-sm-12">
@@ -956,7 +956,7 @@ The unblocked version is especially popular among students because it allows the
                                  </div>
                                  <div class="footer-contact">
                                      <h4 class="title"><i class="fa fa-envelope"></i>Email Address</h4>
-                                     <p>info@fafgames.com</p>
+                                     <p>info@76 Unblocked Gamesgames.com</p>
                                  </div>
                                  <div class="footer-contact">
                                      <h4 class="title"><i class="fa fa-phone"></i>Phone </h4>
@@ -974,7 +974,7 @@ The unblocked version is especially popular among students because it allows the
                              <div class="footer-bottom-inn">
                                  <div class="footer-logo">
                                      <a href="index.html">
-                                         <img src="../assets/img/logo.png" alt="FAF Games" />
+                                         <img src="../assets/img/logo.png" alt="76 Unblocked Games Games" />
                                      </a>
                                  </div>
                                  <div class="footer-social">
@@ -986,7 +986,7 @@ The unblocked version is especially popular among students because it allows the
                                      </ul>
                                  </div>
                                  <div class="copyright">
-                                     <p>&copy; Copyrights 2020 FAF GAMES - All Rights Reserved</p>
+                                     <p>&copy; Copyrights 2020 76 Unblocked Games GAMES - All Rights Reserved</p>
                                  </div>
                              </div>
                          </div>
