--- a/game/2048.html
+++ b/game/2048.html
@@ -1,15 +1,12 @@
-
-
 <!DOCTYPE html>
     <html lang="en-US">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>2048 Unblocked: Play Now for Free on FAF Games</title>
-        <meta name="description" content="
+        <title>2048 Unblocked: Play Now for Free on 76 Unblocked Games Games</title>
+        <meta name="description" content="Play 2048, the addictive sliding tile puzzle game! Combine numbered tiles to reach 2048. Simple to learn, challenging to master"/>
        
-            
         <meta name="title" content="Fruit Merge, Fruit Merge Unblocked">
         <meta name="keywords" content="Candy Jump Game, Farm Heroes Saga, Fruit Merge, Candy Crush Saga, 2048, 2048 Unblocked,
         puzzle games examples
@@ -30,9 +27,9 @@
         candy jump world record 2022
         coolmath
         color jump switch">
-       <meta name="author" content="FAF Games Team">
-        <link rel="canonical" href="/game/2048.html" />
-	<meta name="publisher" content="FAF Games Team">
+       <meta name="author" content="76 Unblocked Games Games Team">
+        <link rel="canonical" href="https://76-unblockedgames.github.io/game/2048.html" />
+	<meta name="publisher" content="76 Unblocked Games Games Team">
 	<meta name="robots" content="index, follow">
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
@@ -325,7 +322,7 @@
         <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo.png" alt="FAF Games" /></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo.png" alt="76 Unblocked Games Games" /></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="menu-toggle"></span>
               </button>
@@ -1149,7 +1146,7 @@
                          <div class="col-lg-4 col-md-6 col-sm-12">
                              <div class="single-footer">
                                  <h3>About us</h3>
-                                <p>Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://faf-games.github.io/">FAF Games</a>. Join FAF Games today and start playing!</p>
+                                <p>Welcome to 76 Unblocked Games Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76 Unblocked Games-games.github.io/">76 Unblocked Games Games</a>. Join 76 Unblocked Games Games today and start playing!</p>
                              </div>
                          </div>
                          <div class="col-lg-5 col-md-6 col-sm-12">
@@ -1191,7 +1188,7 @@
                                  </div>
                                  <div class="footer-contact">
                                      <h4 class="title"><i class="fa fa-envelope"></i>Email Address</h4>
-                                     <p>info@fafgames.com</p>
+                                     <p>info@76 Unblocked Gamesgames.com</p>
                                  </div>
                                  <div class="footer-contact">
                                      <h4 class="title"><i class="fa fa-phone"></i>Phone </h4>
@@ -1209,7 +1206,7 @@
                              <div class="footer-bottom-inn">
                                  <div class="footer-logo">
                                      <a href="index.html">
-                                         <img src="../assets/img/logo.png" alt="FAF Games" />
+                                         <img src="../assets/img/logo.png" alt="76 Unblocked Games Games" />
                                      </a>
                                  </div>
                                  <div class="footer-social">
@@ -1221,7 +1218,7 @@
                                      </ul>
                                  </div>
                                  <div class="copyright">
-                                     <p>&copy; Copyrights 2020 FAF GAMES - All Rights Reserved</p>
+                                     <p>&copy; Copyrights 2020 76 Unblocked Games GAMES - All Rights Reserved</p>
                                  </div>
                              </div>
                          </div>
