--- a/game/2048.html
+++ b/game/2048.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>2048 Unblocked: Play Now for Free on 76 Unblocked Games Games</title>
+        <title>2048 Unblocked: Play Now for Free on 76 Unblocked Games</title>
         <meta name="description" content="Play 2048, the addictive sliding tile puzzle game! Combine numbered tiles to reach 2048. Simple to learn, challenging to master"/>
        
         <meta name="title" content="Fruit Merge, Fruit Merge Unblocked">
