--- a/game/2048.html
+++ b/game/2048.html
@@ -301,16 +301,15 @@
         </style>
 
 
-         <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-6BPGNZNTLZ"></script>
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6BJMQNQ0YV"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-6BPGNZNTLZ');
+  gtag('config', 'G-6BJMQNQ0YV');
 </script>
-
        </head>
        <body>
            
