--- a/idle/index.html
+++ b/idle/index.html
@@ -57,44 +57,44 @@
     <!-- Header Area Start -->
     <nav class="fag-header navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo.png" alt="FAF Games" /></a>
+            <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="menu-toggle"></span>
             </button>
            <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
     <ul class="header_menu mr-auto">
         <li class="nav-item active">
-            <a href="https://faf-games.github.io/index.html" class="nav-link">Home</a>
+            <a href="./index.html" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
-            <a href="https://faf-games.github.io/action/index.html" class="nav-link">Action</a>
+            <a href="../action/index.html" class="nav-link">Action</a>
         </li>
         <li class="nav-item">
-            <a href="https://faf-games.github.io/adventure/index.html" class="nav-link">Adventure</a>
+            <a href="../adventure/index.html" class="nav-link">Adventure</a>
         </li>
         <li class="nav-item">
-            <a href="https://faf-games.github.io/bike/index.html" class="nav-link">Bike</a>
+            <a href="../bike/index.html" class="nav-link">Bike</a>
         </li>        
         <li class="nav-item">
-            <a href="https://faf-games.github.io/car/index.html" class="nav-link">Car</a>
+            <a href="../car/index.html" class="nav-link">Car</a>
         </li>  
 	    <li class="nav-item">
-            <a href="https://faf-games.github.io/game/1v1-lol.html" class="nav-link">1v1.lol Unblocked</a>
+            <a href="../game/1v1-lol.html" class="nav-link">1v1.lol Unblocked</a>
         </li>
 	    </li>  
 	    <li class="nav-item">
-            <a href="https://faf-games.github.io/2-player-games/index.html" class="nav-link">2 Player Games</a>
+            <a href="../2-player-games/index.html" class="nav-link">2 Player Games</a>
         </li>
         <!-- More Dropdown -->
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">More</a>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="https://faf-games.github.io/idle/index.html">Idle</a></li>
-                <li><a class="dropdown-item" href="https://faf-games.github.io/shooting/index.html">Shooting</a></li>
-                <li><a class="dropdown-item" href="https://faf-games.github.io/skill/index.html">Skill</a></li>
-                <li><a class="dropdown-item" href="https://faf-games.github.io/sport/index.html">Sport</a></li>
-                <li><a class="dropdown-item" href="https://faf-games.github.io/classroom6x/index.html">Classroom 6x</a></li>
-                <li><a class="dropdown-item" href="https://faf-games.github.io/2-player-games/index.html">2 Player Games</a></li>
+                <li><a class="dropdown-item" href="../idle/index.html">Idle</a></li>
+                <li><a class="dropdown-item" href="../shooting/index.html">Shooting</a></li>
+                <li><a class="dropdown-item" href="../skill/index.html">Skill</a></li>
+                <li><a class="dropdown-item" href="../sport/index.html">Sport</a></li>
+                <li><a class="dropdown-item" href="../classroom6x/index.html">Classroom 6x</a></li>
+                <li><a class="dropdown-item" href="../2-player-games/index.html">2 Player Games</a></li>
             </ul>
         </li>
     </ul>
@@ -302,87 +302,63 @@
         </div>
     </section>
     <!-- Games Area End -->
-    <!-- Footer Area Start -->
-    <footer class="fag-footer">
+   <!-- Footer Area Start -->
+    <footer class="fag-footer container">
+      <div id="awn-z8463442"></div>
         <div class="footer-top-area">
-            <div class="container">
+            <div>
                 <div class="row">
-                    <div class="col-lg-4 col-md-6 col-sm-12">
-                        <div class="single-footer">
+                    <div class="col-lg-6 col-md-6 col-sm-12">
+                        <div class="single-footer1">
                             <h3>About us</h3>
-<p>Welcome to FAF Games! We bring you a collection of fun and exciting online games, perfect for everyone. Our team works hard to create games that are easy to play and packed with adventure. Explore our latest <a href="https://faf-games.github.io/">Unblocked Games</a> and start playing now!</p>
+                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://fafgames-2025.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
                         </div>
                     </div>
-                    <div class="col-lg-5 col-md-6 col-sm-12">
-                        <div class="widget-content">
-                            <div class="row clearfix">
-                                <div class=" col-lg-6 col-md-6 col-sm-12">
-                                    <div class="single-footer">
-                                        <h3>Our Games</h3>
+					<div class="col-lg-3">
+                                 <div class="single-footer">
+                                        <h3>Tranding Games</h3>
                                         <ul>
-                                            <li><a href="#"><span class="fa fa-caret-right"></span>Need For Speed</a></li>
-                                            <li><a href="#"><span class="fa fa-caret-right"></span>Call Of Duty</a></li>
-                                            <li><a href="#"><span class="fa fa-caret-right"></span>Resident Evil</a></li>
-                                            <li><a href="#"><span class="fa fa-caret-right"></span>Dragons Fight</a></li>
-                                            <li><a href="#"><span class="fa fa-caret-right"></span>2 Player Champions</a></li>
+                                            <li><a href="/game/drift-hunters.html">Drift Hunters</a></li>
+                                            <li><a href="/game/drift-boss.html">Drift Boss</a></li>
+                                            <li><a href="/game/block-blast.html">Block Blast</a></li>
+                                            <li><a href="/game/1v1-lol.html">1V1.lol Unblocked</a></li>
+                                            <li><a href="/game/eggy-car.html">Eggy Car</a></li>
+                                        </ul>
+                                    </div>
+					           </div>
+
+					 <div class=" col-lg-3 col-md-6 col-sm-12">
+                                    <div class="single-footer">
+                                        <h3>Top Games</h3>
+                                        <ul>
+                                            <li><a href="/game/moto-x3m-bike-race.html">Moto X3M</a></li>
+                                            <li><a href="/game/survival-race.html">Survival Race</a></li>
+                                            <li><a href="/game/drift-boss.html">Drift Boss</a></li>
+                                            <li><a href="/game/idle-breakout.html">Idle Breakout</a></li>
+                                            <li><a href="/game/angry-gran-run.html">Angry gran Run</a></li>
                                         </ul>
                                     </div>
                                 </div>
-                                <div class=" col-lg-6 col-md-6 col-sm-12">
-                                    <div class="single-footer">
-                                        <h3>Explore</h3>
-                                        <ul>
-                                            <li><a href="#"><span class="fa fa-caret-right"></span>About</a></li>
-                                            <li><a href="#"><span class="fa fa-caret-right"></span>Our Games</a></li>
-                                            <li><a href="#"><span class="fa fa-caret-right"></span>Contact Us</a></li>
-                                            <li><a href="#"><span class="fa fa-caret-right"></span>Help & Support</a></li>
-                                            <li><a href="#"><span class="fa fa-caret-right"></span>Privacy Policy</a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class=" col-lg-3 col-md-6 col-sm-12">
-                        <div class="single-footer">
-                            <h3>Contact Us</h3>
-                            <div class="footer-contact">
-                                <h4 class="title"><i class="fa fa-map-marker"></i>Address </h4>
-                                <p>88 Road, Broklyn Street<br>New York, USA</p>
-                            </div>
-                            <div class="footer-contact">
-                                <h4 class="title"><i class="fa fa-envelope"></i>Email Address</h4>
-                                <p>info@example.com</p>
-                            </div>
-                            <div class="footer-contact">
-                                <h4 class="title"><i class="fa fa-phone"></i>Phone </h4>
-                                <p>777-1234-567</p>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
         <div class="footer-bottom">
-            <div class="container">
+            <div>
                 <div class="row">
                     <div class="col-12">
                         <div class="footer-bottom-inn">
                             <div class="footer-logo">
                                 <a href="../index.html">
-                                    <img src="../assets/img/logo.png" alt="FAF Games" />
+                                    <img src="../assets/img/logo/logo.png" alt="site logo" style="width: 150px; height: auto;" />
                                 </a>
                             </div>
                             <div class="footer-social">
-                                <ul>
-                                    <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
-                                    <li><a href="#"><span class="fab fa-instagram"></span></a></li>
-                                    <li><a href="#"><span class="fab fa-youtube"></span></a></li>
-                                    <li><a href="#"><span class="fab fa-twitter"></span></a></li>
-                                </ul>
+                                <p>
+				             </p>
                             </div>
                             <div class="copyright">
-                                <p>&copy; Copyrights 2024 FAF GAMES - All Rights Reserved</p>
+                                <p class="text-white">&copy; Copyrights 2024 FAF-GAMES - All Rights Reserved</p>
+				    <p class="text-white">Powered by <a href="https://britishesports.org/nepc/gaming-houses/" target="_blank" rel="noopener"><b>British Esports Federation  </b></a></p>
                             </div>
                         </div>
                     </div>
@@ -407,7 +383,7 @@
     <script src="../assets/js/nouislider.min.js"></script>
     <!-- Isotop Js -->
     <script src="../assets/js/isotope.pkgd.min.js"></script>
-    <script src="../assets/js/custom-isotop.js"></script>
+    <!-- <script src="../assets/js/custom-isotop.js"></script> -->
     <!-- Counter JS -->
     <script src="../assets/js/jquery.counterup.min.js"></script>
     <!-- Custom Clock JS -->
