--- a/2-player-games/index.html
+++ b/2-player-games/index.html
@@ -678,7 +678,7 @@ Popular 2 player games include action, racing, fighting, and strategy genres. Wh
                         <div class="footer-bottom-inn">
                             <div class="footer-logo">
                                 <a href="../index.html">
-                                    <img src="../assets/img/logo/logo.png" alt="site logo" style="width: 150px; height: auto;" />FAF Games
+                                    <img src="../assets/img/logo/logo.png" alt="site logo" style="width: 150px; height: auto;" />
                                 </a>
                             </div>
                             <div class="footer-social">
