--- a/index.html
+++ b/index.html
@@ -274,14 +274,14 @@
             <div class="row">
                 <div class="col-12">
                     <div class="games-masonary">
-                        <div class="projectFilter project-btn">
+<!--                         <div class="projectFilter project-btn">
                             <ul>
                                 <li><a href="https://discord.com/invite/uGaX6kWA7u" data-filter="*" class="current">Join Our Discord</a></li>
                                 <li><a href="#" data-filter=".desktop">Desktop</a></li>
                                 <li><a href="#" data-filter=".mobile">mobile</a></li>
 			        <li><a href="#" data-filter=".desktop">Show All</a></li>
                             </ul>
-                        </div>
+                        </div> -->
 
 
                                <div class="clearfix gamesContainer">
