--- a/index.html
+++ b/index.html
@@ -262,9 +262,9 @@
 
                 <div class="col-12">
                     <div class="site-heading">
-                        <h1 class="heading_animation"><span>unblocked games</span></h1>
+                        <h1 class="heading_animation"><span>unblocked games 76</span></h1>
                         <p class="body-color">
-                            <strong>What is Unblocked Games? <br></strong>
+                           
                             Unblocked games or unblocked games 6x are the games that you can play in restricted areas like schools or workplaces easily, without downloading. Students love these games because they're fun to play during breaks or free time. They also help improve skills like solving problems, thinking fast, and planning ahead. These games are easy to play on Chromebooks, school computers, and any device with internet. That makes them great for a quick break between classes.
 
                         </p>
