--- a/io-games/index.html
+++ b/io-games/index.html
@@ -195,7 +195,7 @@ If you want to play io games online for free, without signing up or downloading 
 				    <div class="games-single-item img-contain-isotope">
 				        <div class="games-thumb">
 				            <a href="/game/basketball-bros.html">
-				                <img src="assets/img/basketball-bros/basketball-bros.webp" alt="Basketball Bros" title="Basketball Bros" />
+				                <img src="../assets/img/basketball-bros/basketball-bros.webp" alt="Basketball Bros" title="Basketball Bros" />
 				            </a>
 				        </div>
 				        <div class="games-desc">
