--- a/game/3d-bowling.html
+++ b/game/3d-bowling.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
     <html lang="en-US">
     <head>
@@ -652,7 +651,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://fafgames-2025.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="../game/3d-bowling.html">Unblocked Games</a>. Join FAF Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
@@ -730,7 +729,7 @@
          <script>
         function loadMainGame()
         {
-            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://3dbowling.github.io/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="../assets/game/3d-bowling.html" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
             document.getElementById("loadgame").innerHTML = html;
             document.getElementById('loadgame').scrollIntoView();
         }
