--- a/game/bob-the-robber-4.html
+++ b/game/bob-the-robber-4.html
@@ -822,7 +822,7 @@
                          <div class="col-12">
                              <div class="footer-bottom-inn">
                                  <div class="footer-logo">
-                                     <a href="index.html">
+                                     <a href="../index.html">
                                          <img src="../assets/img/logo.png" alt="FAF Games" />
                                      </a>
                                  </div>
