--- a/game/axis-football-league.html
+++ b/game/axis-football-league.html
@@ -310,7 +310,7 @@
         <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;">FAF Games</a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="menu-toggle"></span>
               </button>
@@ -689,7 +689,7 @@
                     <div class="col-12">
                         <div class="footer-bottom-inn">
                             <div class="footer-logo">
-                                <a href="index.html">
+                                <a href="../index.html">
                                     <img src="../assets/img/logo/logo.png" alt="site logo" style="width: 150px; height: auto;" />
                                 </a>
                             </div>
