--- a/car/index.html
+++ b/car/index.html
@@ -11,6 +11,7 @@
     <meta name="author" content="FAF Games Team">
 	<meta name="publisher" content="FAF Games Team">
 	 <link rel="canonical" href="/car/index.html" />
+	
     <!-- Title -->
     <title>Play 🚗💨 Car Games on FAF Games | Unblocked Games</title>
     <!-- Favicon -->
@@ -97,6 +98,10 @@
             </ul>
         </li>
     </ul>
+		    <div class="search-container">
+        <input type="text" id="gameSearch" placeholder="Search 250+ games" oninput="searchGames()">
+        <div id="gameList"></div>
+</div>
 </div>
         </div>
     </nav>
@@ -1071,7 +1076,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://fafgames-2025.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
