--- a/bike/index.html
+++ b/bike/index.html
@@ -95,10 +95,10 @@
             </ul>
         </li>
     </ul>
- <!-- <div class="search-container">
+  <div class="search-container">
         <input type="text" id="gameSearch" placeholder="Search 250+ games" oninput="searchGames()">
         <div id="gameList"></div>
-</div> -->
+</div>
 </div>
         </div>
     </nav>
