--- a/game/bob-the-robber-4.html
+++ b/game/bob-the-robber-4.html
@@ -13,7 +13,7 @@
         bob the robber 1
         bob the robber 2
         bob the robber 4 season 1
-        bob the robber 4 season 3
+        bob the robber 4 season 3 
         bob the robber 4 hacked
         bob the robber 4 season 2">
        <meta name="author" content="FAF Games Team">
@@ -345,6 +345,10 @@
                           <a href="../sport/index.html" class="nav-link">Sport</a>
                       </li>
                   </ul>
+		       <div class="search-container">
+        <input type="text" id="gameSearch" placeholder="Search 250+ games" oninput="searchGames()">
+        <div id="gameList"></div>
+</div>
               </div>
           </div>
       </nav>
@@ -763,7 +767,7 @@
                          <div class="col-lg-4 col-md-6 col-sm-12">
                              <div class="single-footer">
                                  <h3>About us</h3>
-                                <p>Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://faf-games.github.io/">FAF Games</a>. Join FAF Games today and start playing!</p>
+                                <p>Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">FAF Games</a>. Join FAF Games today and start playing!</p>
                              </div>
                          </div>
                          <div class="col-lg-5 col-md-6 col-sm-12">
