--- a/2-player-games/index.html
+++ b/2-player-games/index.html
@@ -98,7 +98,7 @@
             </ul>
         </li>
     </ul>
-		    <div class="search-container">
+     <div class="search-container">
         <input type="text" id="gameSearch" placeholder="Search 250+ games" oninput="searchGames()">
         <div id="gameList"></div>
 </div>
@@ -644,7 +644,7 @@ Popular 2 player games include action, racing, fighting, and strategy genres. Wh
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/index.html">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
@@ -682,7 +682,7 @@ Popular 2 player games include action, racing, fighting, and strategy genres. Wh
                         <div class="footer-bottom-inn">
                             <div class="footer-logo">
                                 <a href="../index.html">
-                                    <img src="../assets/img/logo/logo.png" alt="site logo" style="width: 150px; height: auto;" />
+                                    <img src="../assets/img/logo/logo.png" alt="site logo" style="width: 150px; height: auto;" />FAF Games
                                 </a>
                             </div>
                             <div class="footer-social">
