--- a/io-games/index.html
+++ b/io-games/index.html
@@ -344,6 +344,10 @@
                           <a href="../sport/index.html" class="nav-link">Sport</a>
                       </li>
                   </ul>
+		       <div class="search-container">
+        <input type="text" id="gameSearch" placeholder="Search 250+ games" oninput="searchGames()">
+        <div id="gameList"></div>
+</div>
               </div>
           </div>
       </nav>
