--- a/skill/index.html
+++ b/skill/index.html
@@ -98,6 +98,10 @@
             </ul>
         </li>
     </ul>
+		     <div class="search-container">
+        <input type="text" id="gameSearch" placeholder="Search 250+ games" oninput="searchGames()">
+        <div id="gameList"></div>
+</div>
 </div>
         </div>
     </nav>
