--- a/index.html
+++ b/index.html
@@ -1267,7 +1267,7 @@
     <!--Main js-->
     <script src="assets/js/main.js"></script>
     <!--Search Bar js-->
-<!--     <script src="assets/js/script.js"></script> -->
+    <script src="assets/js/script.js"></script>
 
 
 
