--- a/action/index.html
+++ b/action/index.html
@@ -664,6 +664,8 @@
     <script src="../assets/js/clock-custom.js"></script>
     <!--Main js-->
     <script src="../assets/js/main.js"></script>
+	<!--Search Bar js-->
+    <script src="assets/js/script.js"></script>
 
 </body>
 </html>
