--- a/action/index.html
+++ b/action/index.html
@@ -667,5 +667,16 @@
 	<!--Search Bar js-->
     <script src="assets/js/script.js"></script>
 
+
+	<script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/service-worker.js')
+    .then(function(registration) {
+      console.log('ServiceWorker registration successful with scope: ', registration.scope);
+    }, function(err) {
+      console.log('ServiceWorker registration failed: ', err);
+    });
+  }
+</script>
 </body>
 </html>
