--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 		  <div class="banner-ad-wrapper"><div class="banner-ad-content" style="padding: 20px; text-align: center;">
 
 			 
-		    </div></div>
+		  </div class="p-5"></div>
 
                 <div class="col-12">
                     <div class="site-heading">
