--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -5,14 +5,14 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>1v1.lol Unblocked: Play Now for Free on FAF Games</title>
+        <title>1v1.lol Unblocked: 1v1 lol Play At 76 Unblocked Games</title>
         <meta name="description" content="Play 1v1.lol Unblocked, a competitive third-person shooter. Build strategically in modes like battle royale, box fight, and zone wars. Be the last player standing!">
         <meta name="title" content="1v1 LOL Unblocked">
         <meta name="keywords" content="1v1 lol unblocked, 1v1 sites, 1v1unblocked, lol.1v1 unblocked, 1v1 lol sites, 1v1. lol unblocked, 1vs1 lol unblocked, v1.lol unblocked google sites, 1v1 lol google sites, lol 1v1 unblocked, 1v1 lol unblocked 66, 1v1 lol unblocked games, 1v1lol unblocked, 1v1 unblocked, 1v1.lol unblocked games, 1v1.unblocked, https //1v1.lol unblocked, 1v1.lol unblocked 77, 1v1lolunblocked, 1v1 tennis unblocked, 1v1 sites">
         <meta name="news_keywords" content="1v1.lol unblocked, 1v1 lol 66, 1v1 lol Unblocked Games, 1v1.lol hacks, 1v1.lol alternative, 1v1 lol 76, 1v1 lol unblocked 911, 1v1.lol aimbot, 1v1 lol poki, 1v1.lol Unblocked, 1v1 Unblocked ">
-        <meta name="author" content="FAF Games Team">
-        <link rel="canonical" href="/game/1v1-lol.html" />
-	<meta name="publisher" content="FAF Games Team">
+        <meta name="author" content="76 Unblocked">
+        <link rel="canonical" href="https://76-unblockedgames.github.io/game/1v1-lol.html" />
+	<meta name="publisher" content="76 Unblocked Games">
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
@@ -303,9 +303,9 @@
   "genre": ["Shooter", "Battle Royale", "Strategy"],
   "publisher": {
     "@type": "Organization",
-    "name": "FAF Games Team"
+    "name": "76 Unblocked Games"
   },
-	"image": "https://faf-games.github.io/assets/img/1v1.lol/1v1-lol.jpg",
+	"image": "https://76-unblockedgames.github.io/assets/img/1v1.lol/1v1-lol.jpg",
   "operatingSystem": "Any web browser",
   "applicationCategory": "Game",
   "aggregateRating": {
@@ -321,7 +321,7 @@
   },
   "author": {
     "@type": "Organization",
-    "name": "FAF Games Team"
+    "name": "76 Unblocked Games"
   }
 }
 </script>
@@ -926,7 +926,7 @@
 <p>In case you haven’t heard, 1v1.lol is an exciting one-on-one shooter game that also lets you build defensive structures. It’s like a mini version of Fortnite but more focused on quick, <strong>tactical battles</strong>. Whether you love building or just want to outshoot your opponent, this game offers both. It’s become super popular in schools, especially because it tests your reflexes and strategy in a short, fun match.</p>
 
 <h2>Why Do You Need 1v1.lol Unblocked?</h2>
-<p>Most school or work networks block <strong>online games</strong>, which can be a real bummer when you want a quick break. The <strong>unblocked version of 1v1.lol</strong> is great because it bypasses those restrictions, letting you play on your school’s computer without any hassle. You can just search for a website that hosts the  <strong> <a href="https://faf-games.github.io/">Unblocked Games</a></strong>, load it up, and start having fun.</p>
+<p>Most school or work networks block <strong>online games</strong>, which can be a real bummer when you want a quick break. The <strong>unblocked version of 1v1.lol</strong> is great because it bypasses those restrictions, letting you play on your school’s computer without any hassle. You can just search for a website that hosts the  <strong> <a href="https://76-unblockedgames.github.io/">Unblocked Games</a></strong>, load it up, and start having fun.</p>
 
 <h2>How to Find 1v1.lol Unblocked</h2>
 <p>Finding the unblocked version is pretty easy. There are tons of sites that offer it. Just search for <strong>1v1.lol unblocked on Google</strong>, and you’ll come across some game sites that let you play without any restrictions. Once you’re on one of these sites, you can jump right into a game—no need to download anything or create an account.</p>
@@ -950,7 +950,7 @@ The unblocked version is especially popular among students because it allows the
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/index.html">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/index.html">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
@@ -996,7 +996,7 @@ The unblocked version is especially popular among students because it allows the
 				             </p>
                             </div>
                             <div class="copyright">
-                                <p class="text-white">&copy; Copyrights 2024 FAF-GAMES - All Rights Reserved</p>
+                                <p class="text-white">&copy; Copyrights 2024 76 Unblocked Games - All Rights Reserved</p>
 				    <p class="text-white">Powered by <a href="https://britishesports.org/nepc/gaming-houses/" target="_blank" rel="noopener"><b>British Esports Federation  </b></a></p>
                             </div>
                         </div>
