--- a/game/3d-bowling.html
+++ b/game/3d-bowling.html
@@ -17,7 +17,7 @@
         how to play bowling ">
         <meta name="author" content="76 Unblocked Games">
 	<meta name="publisher" content="76 Unblocked Games">
-        <link rel="canonical" href="/game/3d-bowling.html" />
+        <link rel="canonical" href="https://76-unblockedgames.github.io/game/3d-bowling.html" />
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
