--- a/game/3d-car-simulator.html
+++ b/game/3d-car-simulator.html
@@ -8,11 +8,11 @@
               <meta http-equiv="X-UA-Compatible" content="IE=edge">
               <meta name="description" content=" 3D Car Simulator drive rally cars, muscle cars, and police vehicles! Explore different maps, race, and test your driving skills in this thrilling 3D game.">
               <meta name="keywords" content=" 3d car simulator online, 3d car simulator poki, 3d car simulator unblocked, 3d driving simulator google, 3d driving class, car simulator free, car simulator game, driving simulator online, car simulator pc">
-              <meta name="author" content="FAF Games Team">
-		<meta name="publisher" content="FAF Games Team">
-              <link rel="canonical" href="/game/3d-car-simulator.html" />
+              <meta name="author" content="76 Unblocked Games">
+		<meta name="publisher" content="76 Unblocked Games">
+              <link rel="canonical" href="https://76-unblockedgames.github.io/game/3d-car-simulator.html" />
               <!-- Title -->
-              <title>3D Car Simulator: Play Now for Free on FAF Games</title>
+              <title>3D Car Simulator Unblocked: Play 3D Car Simulator At 76 Unblocked Games<</title>
               <!-- Favicon -->
               <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
                      <!--Bootstrap css-->
@@ -306,7 +306,7 @@
             <!-- Header Area Start -->
             <nav class="fag-header navbar navbar-expand-lg">
               <div class="container">
-                  <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+                  <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                       <span class="menu-toggle"></span>
                   </button>
@@ -1231,7 +1231,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
@@ -1277,7 +1277,7 @@
 				             </p>
                             </div>
                             <div class="copyright">
-                                <p class="text-white">&copy; Copyrights 2024 FAF-GAMES - All Rights Reserved</p>
+                                <p class="text-white">&copy; Copyrights 2024 76 Unblocked Games - All Rights Reserved</p>
 				    <p class="text-white">Powered by <a href="https://britishesports.org/nepc/gaming-houses/" target="_blank" rel="noopener"><b>British Esports Federation  </b></a></p>
                             </div>
                         </div>
