--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
                                <div class="clearfix gamesContainer">
 
-										<div class="games-item desktop">
+<!-- 										<div class="games-item desktop">
                                   <div class="games-single-item img-contain-isotope">
                                       <div class="games-thumb">
                            <a href="./game/drive-mad.html">
@@ -298,7 +298,7 @@
                         <p class="game-meta">Car | Racing | Desktop | Mobile</p>
                      </div>
                   </div>
-               </div>
+               </div> -->
 
 					<!-- start game item -->
 				<div class="games-item desktop">
