--- a/game/8ball-pool.html
+++ b/game/8ball-pool.html
@@ -5,14 +5,14 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>8 Ball Pool: Play Now for Free on FAF Games</title>
-        <meta name="description" content="
+        <title>8 Ball Pool Unblocked: Play 8 Ball Pool At 76 Unblocked Games</title>
+        <meta name="description" content="Enjoy the classic 8 Ball Pool game online. Compete with players, improve your skills, and experience realistic billiards gameplay. Play now for free!"/>
             
         <meta name="title" content="8 Ball Pool">
         <meta name="keywords" content="sport games online, sport games free download, sport games for kids, sports games free, 8 ball pool online, 8 ball pool pc, 8 ball pool download, 8 ball pool miniclip, 8 ball pool online free, 8 ball pool facebook, 8 ball pool unblocked, 8 ball pool online with friends">
-        <meta name="author" content="FAF Games Team">
-	    <meta name="publisher" content="FAF Games Team">
-        <link rel="canonical" href="/game/8ball-pool.html" />
+        <meta name="author" content="76 Unblocked Games">
+	    <meta name="publisher" content="76 Unblocked Games">
+        <link rel="canonical" href="https://76-unblockedgames.github.io/game/8ball-pool.html" />
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
@@ -303,7 +303,7 @@
         <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="menu-toggle"></span>
               </button>
@@ -645,7 +645,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
@@ -691,7 +691,7 @@
 				             </p>
                             </div>
                             <div class="copyright">
-                                <p class="text-white">&copy; Copyrights 2024 FAF-GAMES - All Rights Reserved</p>
+                                <p class="text-white">&copy; Copyrights 2024 76 Unblocked Games - All Rights Reserved</p>
 				    <p class="text-white">Powered by <a href="https://britishesports.org/nepc/gaming-houses/" target="_blank" rel="noopener"><b>British Esports Federation  </b></a></p>
                             </div>
                         </div>
