--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -482,7 +482,7 @@
              <div class="container">
                 <div class="row">	
       
-<h2 class="section-title">Not Working? Try Other Servers:</h2>
+<!-- <h2 class="section-title">Not Working? Try Other Servers:</h2>
 			 <div class="games-item desktop">
     <div class="games-single-item img-contain-isotope">
         <div class="games-thumb">
@@ -565,7 +565,7 @@
             <p class="game-meta">Alt Links</p>
         </div>
     </div>
-</div>
+</div> -->
 
 
 	<div class="col-12">
