--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -281,6 +281,26 @@
                 margin-bottom: 30px;
                 margin-top: 20px
             }
+
+
+/* extra */
+.search-dropdown {
+    position: absolute;
+    background: white;
+    border: 1px solid #ccc;
+    max-height: 200px;
+    overflow-y: auto;
+    width: 100%;
+    z-index: 1000;
+    display: none;
+}
+.search-dropdown li {
+    padding: 8px 12px;
+    cursor: pointer;
+}
+.search-dropdown li:hover {
+    background-color: #f0f0f0;
+}
             
         </style>
 
