--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -404,7 +404,7 @@
     </ul>
 	   <div class="search-container" style="position: relative;">
     <input type="text" id="gameSearch" placeholder="Search 250+ games" autocomplete="off" style="padding: 6px 12px; border-radius: 4px; width: 200px; border-radius: 10px !important; margin-bottom: 5px !important;">
-    <ul id="gameList" style="list-style: none; margin: 0; padding: 0; position: absolute; background: #0f1320 !important; width: 100%; color: green !important; box-shadow: 0 2px 6px rgba(0,0,0,0.1); z-index: 9999; display: none;"></ul>
+    <ul id="gameList" style="list-style: none; margin: 0; padding: 0; position: absolute; background: #0f1320 !important; width: 100%; color: #38d933 !important; box-shadow: 0 2px 6px rgba(0,0,0,0.1); z-index: 9999; display: none;"></ul>
 </div>
 </div>
         </div>
